
[package]
name = "r2r-echo"
version = "0.0.1"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
description = "Example use of r2r, basically ros2 topic echo in an ncurses UI."
license = "Apache-2.0/MIT"
edition = "2018"

[dependencies]
r2r = { path = "../r2r/" }
serde_json = "1.0"
tui = "0.5"
termion = "1.5"
